--- a/index.html
+++ b/index.html
@@ -12,65 +12,85 @@
 
 <body>
   <header>
-    
-  <h1 class="o1"><span>Web</span><span>Studio</span></h1>
-
-
+    <a href="">WebStudio</a>
+    <nav>
  <ul>
-  <li><a class="link1"   href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">Студія</a></li>
-  <li><a class="link2"   href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">Портфоліо</a></li>
-  <li><a class="link3"   href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">Контакти</a></li>
-  <li><a class="link4" href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
- <li><a class="link5"   href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">+380507730325</a></li>
+  
+  <li><a   href="">Студія</a></li>
+  <li><a   href="">Портфоліо</a></li>
+  <li><a    href="">Контакти</a></li>
 </ul>
-</header>
-<main>
-<div class="m1"></div>
-<p class="text">EФЕКTИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</p>
-<button>Замовити послугу</button>
-<h2 class="l1">
-  УВАГА ДО ДЕТАЛЕЙ</h2>
-  <h2 class="l2">ПунктуальнІсть</h2>
-<h2 class="l3">ПЛАНУВАННЯ</h2>
-<h2 class="l4">СУЧАСНІ ТЕхнології</h2>
+</nav>
 
-<p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum consequatur porro suscipit at nostrum. At asperiores unde dolores ea id beatae, eum impedit quis laudantium doloremque ab dolor veritatis.</p>
-<p class="p2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias quidem nisi harum ullam earum, debitis nobis? Autem, consequatur. Nobis vitae ipsa laudantium perferendis, ad adipisci commodi vero qui voluptate porro.</p>
-<p class="p3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla sapiente itaque doloremque odio sint minus minima voluptatum quisquam excepturi repellendus temporibus accusantium maiores in eveniet reprehenderit, a officia accusamus nisi!</p>
-<p class="p4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, nesciunt veniam? Vero minus fugit similique recusandae dolorum dolor inventore, quod adipisci odit tempora voluptatibus rerum animi, voluptatum, aspernatur assumenda labore.</p>
-<div class="m2"></div>
-<h1 class="o2">Чим ми займаємося</h1>
-<img class="mg1" src="123.png" alt="">
-<img class="mg2" src="1234.png" alt="">
-<img class="mg3" src="12345.png" alt="">
-<h1 class="o3">Наша команда</h1>
-<div class="m3"></div>
-<img class="mg4" src="678.jpg" alt="">
-<p class="text1">Ігорь Дем'янов
-  </p>
-  <p class="text2">Product Designer</p>
-<div class="m4"></div>
-<img class="mg5" src="901.jpg" alt="">
-<p class="text3">Ольга Репіна</p>
-<p class="text4">Frontend Developer</p>
-<div class="m5"></div>
-<img class="mg6" src="902.jpg" alt="">
-<p class="text5">Микола Тарасов</p>
-<p class="text6">Marketing</p>
-<div class="m6"></div>
-<img class="mg7" src="903.jpg" alt="">
-<p class="text7">Михайло Єрмаков</p>
-<p class="text8">UI Designer</p>
+<ul>
+<li><a  href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
+ <li><a    href="">+380507730325</a></li>
+</ul>
+
+</header>
+
+<main>
+
+<section> 
+<h3> EФЕКTИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h3>
+<button>Замовити послугу</button>
+</section>
+
+
+<section>
+
+  <h2> Заголовок секції</h2>
+<ul>
+  <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.</p>
+</li>
+<li><h3>ПУНКТУАЛЬНІСТЬ</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.</p>
+</li>
+<li><h3>ПЛАНУВАННЯ</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.</p>
+</li>
+<li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veritatis exercitationem velit magnam iure.</p>
+</li>
+</ul>
+</section>
+
+<section>
+<h2>Чим ми займаємося</h2>
+<img  src="123.png" alt="">
+<img  src="1234.png" alt="">
+<img  src="12345.png" alt="">
+
+<h2>Наша команда</h2>
+<ul>
+  <li><img  src="678.jpg" alt=""></li>
+ <li>Ігорь Дем'янов</li>
+   <li>Product Designer</li>
+   <li><img src="901.jpg" alt=""></li>
+<li
+ >Ольга Репіна</li>
+<li>Frontend Developer</li>
+
+<li><img src="902.jpg" alt=""></li>
+ <li>Микола Тарасов</li>
+<li>Marketing</li>
+
+<li> <img  src="903.jpg" alt=""></li>
+<li>Михайло Єрмаков</li>
+<li>UI Designer</li>
+</ul>
+
+</section>
 </main>
 <footer>
-<div class="m7"></div>
-  <h1 class="o4"><span>Web</span><span>Studio</span></h1>
-<ul>
 
-<li><a class="link8" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-<li ><a class=link6  href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
-<li><a class="link7"  href="">+380507730325</a></li>
-</ul>
+
+<a href="">WebStudio</a>
+<address><a href="">м. Київ, пр-т Лесі Українки, 26</a></address>
+<a   href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
+<a   href="">+380507730325</a>
+
 </footer>
 
 </body>
