--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <ul>
 <li><a  href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
- <li><a    href="">+380507730325</a></li>
+ <li><a   href="https://google.com">+380507730325</a></li>
 </ul>
 
 </header>
@@ -32,7 +32,7 @@
 <main>
 
 <section> 
-<h3> EФЕКTИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h3>
+<h1> EФЕКTИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
 <button>Замовити послугу</button>
 </section>
 
@@ -58,27 +58,33 @@
 
 <section>
 <h2>Чим ми займаємося</h2>
-<img  src="123.png" alt="">
-<img  src="1234.png" alt="">
-<img  src="12345.png" alt="">
+<ul>
+  <li><img  src="123.png" alt=""></li>
+  <li><img  src="1234.png" alt=""></li>
+    <li><img  src="12345.png" alt=""></li>
+  </ul>
 
 <h2>Наша команда</h2>
 <ul>
-  <li><img  src="678.jpg" alt=""></li>
- <li>Ігорь Дем'янов</li>
-   <li>Product Designer</li>
-   <li><img src="901.jpg" alt=""></li>
-<li
- >Ольга Репіна</li>
-<li>Frontend Developer</li>
+  <li><img  src="678.jpg" alt="">
+ <h4>Ігорь Дем'янов</h4>
+   <p>Product Designer</p>
+  </li>
 
-<li><img src="902.jpg" alt=""></li>
- <li>Микола Тарасов</li>
-<li>Marketing</li>
+   <li><img src="901.jpg" alt="">
 
-<li> <img  src="903.jpg" alt=""></li>
-<li>Михайло Єрмаков</li>
-<li>UI Designer</li>
+ <h4>Ольга Репіна</h4>
+<p>Frontend Developer</p>
+</li>
+
+<li><img src="902.jpg" alt="">
+ <h4>Микола Тарасов</h4>
+<p>Marketing</p>
+</li>
+<li> <img  src="903.jpg" alt="">
+<h4>Михайло Єрмаков</h4>
+<p>UI Designer</p>
+</li>
 </ul>
 
 </section>
