--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
   <header>
-    <a href="">WebStudio</a>
+    
     <nav>
+      <a href="">WebStudio</a>
  <ul>
   
   <li><a   href="">Студія</a></li>
@@ -24,7 +25,7 @@
 
 <ul>
 <li><a  href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
- <li><a   href="https://google.com">+380507730325</a></li>
+ <li><a   href="tel:050-773-0325">+380507730325</a></li>
 </ul>
 
 </header>
@@ -33,7 +34,7 @@
 
 <section> 
 <h1> EФЕКTИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-<button>Замовити послугу</button>
+<button type="button">Замовити послугу</button>
 </section>
 
 
@@ -95,7 +96,7 @@
 <a href="">WebStudio</a>
 <address><a href="">м. Київ, пр-т Лесі Українки, 26</a></address>
 <a   href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
-<a   href="">+380507730325</a>
+<a   href="tel:050-773-0325">+380507730325</a>
 
 </footer>
 
