--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <header>
     
     <nav>
-      <a href="">WebStudio</a>
+      <a href="#">WebStudio</a>
  <ul>
   
-  <li><a   href="">Студія</a></li>
-  <li><a   href="">Портфоліо</a></li>
-  <li><a    href="">Контакти</a></li>
+  <li><a   href="#">Студія</a></li>
+  <li><a   href="#">Портфоліо</a></li>
+  <li><a    href="#">Контакти</a></li>
 </ul>
 </nav>
 
 <ul>
-<li><a  href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a></li>
- <li><a   href="tel:050-773-0325">+380507730325</a></li>
+<li><a  href="mailto:maks1234promiron18@gmail.com">maks1234promiron18@gmail.com</a></li>
+ <li><a   href="tel:0507730325">+380507730325</a></li>
 </ul>
 
 </header>
@@ -58,31 +58,31 @@
 </section>
 
 <section>
-<h2>Чим ми займаємося</h2>
+<h4>Чим ми займаємося</h4>
 <ul>
-  <li><img  src="123.png" alt=""></li>
-  <li><img  src="1234.png" alt=""></li>
-    <li><img  src="12345.png" alt=""></li>
+  <li><img  src="123.png" alt="клавятура"></li>
+  <li><img  src="1234.png" alt="телефон"></li>
+    <li><img  src="12345.png" alt="планшет"></li>
   </ul>
 
-<h2>Наша команда</h2>
+<h4>Наша команда</h4>
 <ul>
-  <li><img  src="678.jpg" alt="">
+  <li><img  src="678.jpg" alt="Ігорь Дем'янов">
  <h4>Ігорь Дем'янов</h4>
    <p>Product Designer</p>
   </li>
 
-   <li><img src="901.jpg" alt="">
+   <li><img src="901.jpg" alt="Ольга Репіна">
 
  <h4>Ольга Репіна</h4>
 <p>Frontend Developer</p>
 </li>
 
-<li><img src="902.jpg" alt="">
+<li><img src="902.jpg" alt="Микола Тарасов">
  <h4>Микола Тарасов</h4>
 <p>Marketing</p>
 </li>
-<li> <img  src="903.jpg" alt="">
+<li> <img  src="903.jpg" alt="Михайло Єрмаков">
 <h4>Михайло Єрмаков</h4>
 <p>UI Designer</p>
 </li>
@@ -93,10 +93,10 @@
 <footer>
 
 
-<a href="">WebStudio</a>
-<address><a href="">м. Київ, пр-т Лесі Українки, 26</a></address>
-<a   href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
-<a   href="tel:050-773-0325">+380507730325</a>
+<a href="#">WebStudio</a>
+<address><a href="#">м. Київ, пр-т Лесі Українки, 26</a></address>
+<a   href="mailto:maks1234promiron18@gmail.com" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
+<a   href="tel:0507730325">+380507730325</a>
 
 </footer>
 
