--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <ul>
 <li><a  href="mailto:maks1234promiron18@gmail.com">maks1234promiron18@gmail.com</a></li>
- <li><a   href="tel:0507730325">+380507730325</a></li>
+ <li><a   href="tel:+380507730325">+380507730325</a></li>
 </ul>
 
 </header>
@@ -58,14 +58,14 @@
 </section>
 
 <section>
-<h4>Чим ми займаємося</h4>
+<h2>Чим ми займаємося</h2>
 <ul>
   <li><img  src="123.png" alt="клавятура"></li>
   <li><img  src="1234.png" alt="телефон"></li>
     <li><img  src="12345.png" alt="планшет"></li>
   </ul>
 
-<h4>Наша команда</h4>
+<h2>Наша команда</h2>
 <ul>
   <li><img  src="678.jpg" alt="Ігорь Дем'янов">
  <h4>Ігорь Дем'янов</h4>
@@ -96,7 +96,7 @@
 <a href="#">WebStudio</a>
 <address><a href="#">м. Київ, пр-т Лесі Українки, 26</a></address>
 <a   href="mailto:maks1234promiron18@gmail.com" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
-<a   href="tel:0507730325">+380507730325</a>
+<a   href="tel:+380507730325">+380507730325</a>
 
 </footer>
 
