--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
 <h2>Наша команда</h2>
 <ul>
   <li><img  src="678.jpg" alt="Ігорь Дем'янов">
- <h4>Ігорь Дем'янов</h4>
+ <h3>Ігорь Дем'янов</h3>
    <p>Product Designer</p>
   </li>
 
    <li><img src="901.jpg" alt="Ольга Репіна">
 
- <h4>Ольга Репіна</h4>
+ <h3>Ольга Репіна</h3>
 <p>Frontend Developer</p>
 </li>
 
 <li><img src="902.jpg" alt="Микола Тарасов">
- <h4>Микола Тарасов</h4>
+ <h3>Микола Тарасов</h3>
 <p>Marketing</p>
 </li>
 <li> <img  src="903.jpg" alt="Михайло Єрмаков">
-<h4>Михайло Єрмаков</h4>
+<h3>Михайло Єрмаков</h3>
 <p>UI Designer</p>
 </li>
 </ul>
@@ -95,7 +95,7 @@
 
 <a href="#">WebStudio</a>
 <address><a href="#">м. Київ, пр-т Лесі Українки, 26</a></address>
-<a   href="mailto:maks1234promiron18@gmail.com" target="https://mail.google.com/mail/u/0/?pli=1#inbox" title=maks1234promiron18@gmail.com>maks1234promiron18@gmail.com</a>
+<a   href="mailto:maks1234promiron18@gmail.com" target="_blank">maks1234promiron18@gmail.com</a>
 <a   href="tel:+380507730325">+380507730325</a>
 
 </footer>
